philly-311-citywide-meta/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <picklist>
            <picklistValues>
                <fullName>Market East Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philly Rising Neighborhood Liaisons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Liaison</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campaigns__c</fullName>
        <label>Campaigns</label>
        <picklist>
            <picklistValues>
                <fullName>Market East Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philly Rising Neighborhood Liasons Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Liaison</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Image_Url__c</fullName>
        <label>Facebook Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Picture__c</fullName>
        <formula>HYPERLINK(sf4twitter__Fcbk_Profile_Url__c,
IF( ( NOT( ISBLANK( sf4twitter__Fcbk_Image_Url__c) )), IMAGE( sf4twitter__Fcbk_Image_Url__c  ,sf4twitter__Fcbk_Profile_Url__c, 48, 48), sf4twitter__Fcbk_Profile_Url__c )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Profile_Url__c</fullName>
        <label>Facebook Profile Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Facebook User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Username__c</fullName>
        <label>Facebook Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Follow_Status__c</fullName>
        <description>Click on link to change following status</description>
        <formula>HYPERLINK(
&apos;javascript:window.location=&quot;/apex/sf4twitter__TwitterFollow?lid=&apos; + Id + &apos;&quot; + ( ( (new RegExp(&quot;[\\?&amp;]isdtp=([^&amp;#]*)&quot;)).exec(window.location.href) == null )?&quot;&quot;: &quot;&amp;isdtp=vw&quot;) &apos;, 
IF(sf4twitter__followed__c == true,&apos;Yes&apos;, &apos;No&apos; ), 
&apos;_self&apos;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click on link to change following status</inlineHelpText>
        <label>Following on Twitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Number__c</fullName>
        <label>Klout Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Score__c</fullName>
        <formula>IF( ABS( sf4twitter__Klout_Number__c )  &gt; 0, TEXT( sf4twitter__Klout_Number__c ) + &apos;  &apos; + IMAGE($Setup.sf4twitter__Twitter_Public_Configuration__c.sf4twitter__Klout_Score_logo__c,&apos;Klout&apos;,17,90), &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Klout Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Bio__c</fullName>
        <label>Twitter Bio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Creation_Date__c</fullName>
        <label>Twitter Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Follower_count__c</fullName>
        <label>Twitter Follower count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Following_count__c</fullName>
        <label>Twitter Following count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Image_Url__c</fullName>
        <label>Twitter Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Last_tweet__c</fullName>
        <label>Twitter Last tweet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Location__c</fullName>
        <label>Twitter Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Picture__c</fullName>
        <formula>HYPERLINK(
&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c,
IF( ( NOT( ISBLANK( sf4twitter__Twitter_Image_Url__c ) )), IMAGE( sf4twitter__Twitter_Image_Url__c ,&apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, 48, 48), 
IF( NOT( ISBLANK( sf4twitter__Twitter_Username__c ) ), &apos;http://twitter.com/&apos; + sf4twitter__Twitter_Username__c, &apos;&apos; ) )
,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twitter Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Status_count__c</fullName>
        <label>Twitter Status count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Twitter User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Username__c</fullName>
        <label>Twitter Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__followed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Followed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>